--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,36 +13,52 @@
   <property name="windowTitle">
    <string>Image Annotation Tool</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">border: 1px solid gray;
+border-radius: 5px;</string>
+  </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <widget class="QWidget" name="imageSet" native="true">
-      <property name="styleSheet">
-       <string notr="true">border: 1px solid gray;
-border-radius: 5px;</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="AnnotatedImageViewerWidget" name="imageViewer" native="true">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
-        <horstretch>1</horstretch>
-        <verstretch>1</verstretch>
-       </sizepolicy>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">border:1px solid yellow</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <layout class="QVBoxLayout" name="verticalLayout">
-      <item>
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0" rowspan="2">
+       <widget class="QWidget" name="imageSet" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>120</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="1" rowspan="2">
+       <widget class="AnnotatedImageViewerWidget" name="imageViewer" native="true">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
+          <horstretch>1</horstretch>
+          <verstretch>1</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="styleSheet">
+         <string notr="true"/>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="2">
        <widget class="QWidget" name="annotationsViewer" native="true"/>
       </item>
-      <item>
-       <widget class="QWidget" name="annotationProperties" native="true"/>
+      <item row="1" column="2">
+       <widget class="QWidget" name="annotationProperties" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>150</width>
+          <height>0</height>
+         </size>
+        </property>
+       </widget>
       </item>
      </layout>
     </item>
@@ -54,7 +70,7 @@ border-radius: 5px;</string>
      <x>0</x>
      <y>0</y>
      <width>944</width>
-     <height>21</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuOpen_Folder">
